# anichii

./: .gitignore  Cargo.toml
src/: ani.rs  db.rs  main.rs  qb.rs  req.rs  resp.rs  rss.rs
webui/: index.html  package.json  vite.config.js
webui/src/: api.js  app.css  app.jsx
webui/src/components/: AnimeModal.jsx  Counter.jsx  EpisodesModal.jsx
webui/src/views/: SettingView.jsx
