[package]
name = "ani-chii"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
rss = "2.0"
quick-xml = "0.37.1"
regex = "1.11.1"
include_dir = "0.7.4"
